# llama2-haskell-inference

./: .gitignore  README.md  cabal.project.freeze  cabal.project.local  export.py  flake.nix  llama2.cabal  model.py  package.yaml  result
.devcontainer/: Dockerfile  devcontainer.json
project/: README.md  package.yaml  project.cabal  stack.yaml
project/app/: Main.hs
project/cli-app/: Main.hs
project/src/: Builder.hs  Inference.hs  Lib.hs  Matrix.hs  NetworkBuilder.hs
project/test/: CustomRandom.hs  HelperSpec.hs  InferenceSpec.hs  Spec.hs  TokenGeneratorSpec.hs
ref/: Makefile
