cabal-version:  3.4

name:           llama2
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/chris-ch/llama2-haskell-inference#readme>
homepage:       https://github.com/githubuser/llama2-haskell-inference#readme
bug-reports:    https://github.com/githubuser/llama2-haskell-inference/issues
author:         Christophe Alexandre
maintainer:     christophe.alexandre@pm.me
category:       LLM
copyright:      2023 Christophe Alexandre
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/llama2-haskell-inference

common shared
  build-depends: base >=4.7 && <5,
    array >= 0.5.4 && < 0.6,
    binary >= 0.8.9 && < 0.9,
    bytestring >= 0.11.5 && < 0.12,
    directory >= 1.3.7 && < 1.4,
    filepath >= 1.4.2 && < 1.5,
    time >= 1.12.2 && < 1.13,
    linear >= 1.22 && < 1.23,
    transformers >= 0.5.6 && < 0.6,
    mtl >= 2.2.2 && < 2.3,
    text >= 2.0.2 && < 2.1,
    vector >= 0.13.1 && < 0.14,
    parallel >= 3.2.2 && < 3.3,
    random >= 1.2.1 && < 1.3,
    matrices >= 0.5.0 && < 0.6,
    split >= 0.2.5 && < 0.3,
    optparse-applicative >= 0.18.1 && < 0.19,
    conduit >= 1.3.5 && < 1.4,
    conduit-extra >= 1.3.6 && < 1.4
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -O2
    -threaded
    -haddock
  default-language: Haskell2010

library
  import: shared
  exposed-modules:
      Inference
      NetworkBuilder
  hs-source-dirs:
      project/src

executable llama2
  import: shared
  main-is: Main.hs
  hs-source-dirs:
      project/cli-app
  build-depends: optparse-applicative,
    llama2

test-suite project-test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      CustomRandom
      HelperSpec
      InferenceSpec
      TokenGeneratorSpec
      Inference
      NetworkBuilder
  hs-source-dirs:
      project/test
      project/src
  build-depends: hspec

